[gd_scene load_steps=11 format=3 uid="uid://dni3slhpkbh34"]

[ext_resource type="Script" path="res://Scripts/pumpkin.gd" id="1_71syc"]
[ext_resource type="Texture2D" uid="uid://cafnwtjbbwrrr" path="res://Art/Environment/Farm/Pumpkin.png" id="2_hky0a"]
[ext_resource type="Texture2D" uid="uid://efg827vh5viy" path="res://Art/Environment/Farm/PumpkinDead.png" id="3_gg7av"]
[ext_resource type="Texture2D" uid="uid://csqiycph4s6s5" path="res://Art/Environment/Farm/Weed2.png" id="4_omsdp"]
[ext_resource type="Texture2D" uid="uid://blftu03byvcrt" path="res://Art/Environment/Farm/Weed3.png" id="5_cr07q"]
[ext_resource type="AudioStream" uid="uid://fchyyxjqruwu" path="res://Sounds/Effects/ExPickupSound.mp3" id="6_bexff"]

[sub_resource type="SpriteFrames" id="SpriteFrames_47awj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hky0a")
}],
"loop": true,
"name": &"alive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_gg7av")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_omsdp")
}],
"loop": true,
"name": &"weeded",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_cr07q")
}],
"loop": true,
"name": &"weeded2",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ec1lo"]
size = Vector2(49, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_foesl"]
radius = 30.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_skdjg"]
radius = 20.0
height = 60.0

[node name="Pumpkin" type="StaticBody2D"]
position = Vector2(0, -6)
script = ExtResource("1_71syc")

[node name="Sprites" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_47awj")
animation = &"weeded2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1.5, 26)
shape = SubResource("RectangleShape2D_ec1lo")

[node name="InteractZone" type="Area2D" parent="." groups=["weed"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractZone"]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_foesl")
disabled = true

[node name="CollisionDead" type="CollisionShape2D" parent="InteractZone"]
position = Vector2(0, 12)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_skdjg")

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_bexff")
pitch_scale = 3.0

[connection signal="area_entered" from="InteractZone" to="." method="_on_interact_zone_area_entered"]
[connection signal="area_exited" from="InteractZone" to="." method="_on_interact_zone_area_exited"]
